# aura-pulse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  windows-build.yml
docs/: ROADMAP.md  WINDOWS.md
src/: app.ts  main.ts  selftest.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  bench.rs  main.rs  sysopt.rs  telemetry.rs  vault.rs
src/lib/: bridge.ts  charts.ts  format.ts  sphere.ts  ui.ts
src/styles/: base.css  layout.css  tokens.css  views.css
src/views/: bench.ts  diagnostics.ts  optimize.ts  settings.ts  vault.ts
